--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -81,7 +81,7 @@
                         <p>Everything about us</p>
                         <h3>Who are we</h3>
                     </header>
-                    <a href="./about.html">Learn more about us</a>
+                    <a href="about.html">Learn more about us</a>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
@@ -143,7 +143,7 @@
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
-                    <a href="./contact.html">Get in touch</a>
+                    <a href="contact.html">Get in touch</a>
                 </div>
             </section>
         </main>
