--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -89,7 +89,10 @@
                 <header>
                     <h2>Typography</h2>
                     <div>
-                        <p>320 Stewart Avenue, Unit 12<br>New York City NY 10001</p>
+                        <address>
+                            <p>320 Stewart Avenue, Unit 12</p>
+                            <br><p>New York City NY 10001</p>
+                        </address>
                     </div>
                     <div>
                         <pre>
