--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -85,6 +85,8 @@
                     </blockquote>
                 </div>
             </section>
+
+            <!-- Typography -->
             <section>
                 <header>
                     <h2>Typography</h2>
