--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -168,7 +168,7 @@
         <!-- Footer -->
         <footer>
             <img src="./logo-black.png" alt="Techium logo" width="160px" height="40px">
-            <p>234 Washington Street<br>Urbana, Illinois</p>
+            <address><p>234 Washington Street</p><br><p>Urbana, Illinois</p></address>
             <div>
                 <ul>
                     <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
