--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -152,19 +152,19 @@
                     </header>
                     <div>
                         <article>
-                            <img src="images/pic-person-01.jpg" alt="Yuri Y." width="100px" height="100px">
+                            <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
                             <blockquote cite="Yuri Y.">
                                 I am completely blown away. Thanks to Techium, we've just launched our 5th website!
                             </blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-person-02.jpg" alt="Dorrie S." width="100px" height="100px">
+                            <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
                             <blockquote cite="Dorrie S.">
                                 Thank you so much for your help. Techium company is awesome!
                             </blockquote>
                         </article>
                         <article>
-                            <img src="images/pic-person-03.jpg" alt="Sven H." width="100px" height="100px">
+                            <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
                             <blockquote cite="Sven H.">
                                 I love your system. Definitely worth the investment. I'd be lost without Techium company.
                             </blockquote>
